--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+google-auth==1.23.0
+google-auth-oauthlib==0.4.2
+gspread==3.6.0
+httplib2==0.18.1
 idna==2.10
 numpy==1.19.4
+oauth2client==4.1.3
+oauthlib==3.1.0
 pandas==1.1.4
 pdfminer==20191125
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycryptodome==3.9.9
 python-dateutil==2.8.1
 pytz==2020.4
 requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
 six==1.15.0
 urllib3==1.25.11
